--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Urotaxi</title>
+  <title>KPJ Car Rentals</title>
 
 
   <!-- slider stylesheet -->
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Urotaxi
+              KPJ Car Rentals
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,7 +85,7 @@
                   Welcome to
                 </h4>
                 <h1>
-                  UROTAXI
+                  KPJ Car Rentals
                 </h1>
               </div>
               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
