--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Urotaxi</title>
+  <title>KPJ Car Rentals</title>
 
 
   <!-- slider stylesheet -->
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Urotaxi
+              KPJ Car Rentals
             </span>
           </a>
           </a>
