--- a/index.html
+++ b/index.html
@@ -104,27 +104,27 @@
                   <div class="carousel-item active">
 
                     <div class="img-box">
-                      <img src="images/slider-img.png" alt="">
+                      <img src="images/slider-img-01.png" alt="">
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="img-box">
-                      <img src="images/slider-img.png" alt="">
+                      <img src="images/slider-img-01.png" alt="">
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="img-box">
-                      <img src="images/slider-img.png" alt="">
+                      <img src="images/slider-img-01.png" alt="">
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="img-box">
-                      <img src="images/slider-img.png" alt="">
+                      <img src="images/slider-img-01.png" alt="">
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="img-box">
-                      <img src="images/slider-img.png" alt="">
+                      <img src="images/slider-img-01.png" alt="">
                     </div>
                   </div>
                 </div>
