--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img src="images/slider-img-01" alt="">
           </div>
         </div>
       </div>
@@ -408,7 +408,7 @@
         </div>
         <div class="col-md-6 px-0">
           <div class="img-box">
-            <img src="images/contact-img.png" alt="">
+            <img src="images/slider-img-01.png" alt="">
           </div>
         </div>
       </div>
