--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                 <li class="nav-item">
                   <a class="nav-link" href="service.html"> Services </a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" href="news.html"> News</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" href="#">Login</a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
