Fotter chagnes rights added

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
   <!-- app section -->
 
-  <section class="app_section layout_padding2">
+  <!-- <section class="app_section layout_padding2">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -459,7 +459,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end app section -->
 
@@ -595,8 +595,8 @@
   <section class="container-fluid footer_section">
     <div class="container">
       <p>
-        &copy; 2021 All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; 2024 All Rights Reserved By
+        <a href="">KPJ Travels</a>
       </p>
     </div>
   </section>
