--- a/service.html
+++ b/service.html
@@ -215,8 +215,8 @@
   <section class="container-fluid footer_section">
     <div class="container">
       <p>
-        &copy; 2021 All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; 2024 All Rights Reserved By
+        <a href="">KPJ Travels</a>
       </p>
     </div>
   </section>
