--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
   <section class="info_section layout_padding-top layout_padding2-bottom">
     <div class="container">
       <div class="box">
-        <div class="info_form">
+        <!-- <div class="info_form">
           <h4>
             Subscribe Our Newsletter
           </h4>
@@ -123,7 +123,7 @@
               </button>
             </div>
           </form>
-        </div>
+        </div> -->
         <div class="info_links">
           <ul>
             <li class=" ">
@@ -135,15 +135,15 @@
             <li class="">
               <a class="" href="service.html"> Services </a>
             </li>
-            <li class="">
+            <!-- <li class="">
               <a class="" href="news.html"> News</a>
-            </li>
+            </li> -->
             <li class="">
               <a class="" href="contact.html">Contact Us</a>
             </li>
-            <li class="">
+            <!-- <li class="">
               <a class="" href="#">Login</a>
-            </li>
+            </li> -->
           </ul>
         </div>
         <div class="info_social">
