hide unwanted crols

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
   <!-- news section -->
 
-  <section class="news_section layout_padding">
+  <!-- <section class="news_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -322,7 +322,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end news section -->
 
