--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              KPJ Car Rentals
+              <img src="images/kpj_travels_logo.png" width="100" alt="KPJ Car Rentals"> 
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +88,7 @@
                 <h4>
                   Welcome to
                 </h4>
-                <h1>
+                <h1 style="color: #f7c621;">
                   KPJ Car Rentals
                 </h1>
               </div>
