cahnge logo css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              <img src="images/kpj_travels_logo.png" width="100" alt="KPJ Car Rentals"> 
+              <img src="images/kpj_travels_logo.png" style="width: 60px; border-radius: 5px; border: 1px solid white;"  alt="KPJ Car Rentals"> 
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
