--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Explore <br>
-          Place With Cab Service
+          Discover  <br>
+          Places with Cab Services
         </h2>
       </div>
       <div class="news_container">
